--- a/app/src/main/res/layout/movies_list_item.xml
+++ b/app/src/main/res/layout/movies_list_item.xml
@@ -8,8 +8,8 @@
         android:id="@+id/list_item_icon"
         android:layout_width="50dp"
         android:layout_height="50dp"/>
-    
 
+    <!-- Added for testing purposes -->
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
