--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/error_message"
-        android:textSize="20sp"
+        android:textSize="@dimen/error_msg_text_size"
         android:visibility="invisible" />
 
     <ProgressBar
@@ -25,5 +25,4 @@
         android:layout_width="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
-
 </FrameLayout>
