--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,81 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+        <variable
+            name="movie"
+            type="com.udacity.android.popularmovies.model.Movie" />
+    </data>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:background="#3F51B5"
-            android:backgroundTint="#4CAF68"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/movie_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/bree_serif"
-            tools:text="Lord of the Rings: The Two Towers"
-            android:textSize="@dimen/title_text_size"
-            app:layout_constraintBottom_toBottomOf="@+id/view"
-            app:layout_constraintStart_toStartOf="@+id/view"
-            app:layout_constraintTop_toTopOf="@+id/view" />
-
-        <ImageView
-            android:id="@+id/detail_movie_image"
-            android:layout_width="123dp"
-            android:layout_height="170dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <TextView
-            android:id="@+id/release_date_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/pt_sans"
-            tools:text="December 18, 2002"
-            android:textSize="@dimen/text_size"
-            app:layout_constraintStart_toEndOf="@+id/detail_movie_image"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
-
-        <TextView
-            android:id="@+id/average_rating_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/pt_sans"
-            android:textSize="@dimen/text_size"
-            app:layout_constraintStart_toStartOf="@+id/release_date_tv"
-            app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
-            tools:text="8.0 / 10.0" />
-
-        <TextView
-            android:id="@+id/movie_description"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/pt_sans"
-            android:paddingLeft="5dp"
-            android:paddingRight="30dp"
-            android:textSize="@dimen/text_size"
-            app:layout_constraintStart_toStartOf="@+id/detail_movie_image"
-            app:layout_constraintTop_toBottomOf="@+id/detail_movie_image"
-            tools:text="Frodo continues his journey through the
+            android:layout_height="wrap_content">
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:background="#3F51B5"
+                android:backgroundTint="#4CAF68"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/movie_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/bree_serif"
+                tools:text="Lord of the Rings: The Two Towers"
+                android:textSize="@dimen/title_text_size"
+                android:text="@{movie.title}"
+                app:layout_constraintBottom_toBottomOf="@+id/view"
+                app:layout_constraintStart_toStartOf="@+id/view"
+                app:layout_constraintTop_toTopOf="@+id/view" />
+
+            <ImageView
+                android:id="@+id/detail_movie_image"
+                android:layout_width="123dp"
+                android:layout_height="170dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="20dp"
+                app:imageUrl="@{movie.image}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/release_date_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/pt_sans"
+                android:text="@{movie.releaseDate}"
+                tools:text="December 18, 2002"
+                android:textSize="@dimen/text_size"
+                app:layout_constraintStart_toEndOf="@+id/detail_movie_image"
+                app:layout_constraintTop_toBottomOf="@+id/view" />
+
+            <TextView
+                android:id="@+id/average_rating_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/pt_sans"
+                android:textSize="@dimen/text_size"
+                android:text="@{movie.averageRating}"
+                app:layout_constraintStart_toStartOf="@+id/release_date_tv"
+                app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
+                tools:text="8.0 / 10.0" />
+
+            <TextView
+                android:id="@+id/movie_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/pt_sans"
+                android:paddingLeft="5dp"
+                android:paddingRight="30dp"
+                android:textSize="@dimen/text_size"
+                android:text="@{movie.description}"
+                app:layout_constraintStart_toStartOf="@+id/detail_movie_image"
+                app:layout_constraintTop_toBottomOf="@+id/detail_movie_image"
+                tools:text="Frodo continues his journey through the
                         mountainous terrain to destroy the ring once and for all." />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+</layout>
