--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -107,6 +107,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
                 app:layout_constraintVertical_bias="0.571"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/trailers_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_description" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
