--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/error_message"
-        android:textSize="@dimen/error_msg_text_size"
+        android:textSize="@dimen/msg_text_size"
         android:visibility="invisible" />
 
     <ProgressBar
@@ -25,4 +25,14 @@
         android:layout_width="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/no_favorites_added"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="@string/no_favorites"
+        android:textSize="@dimen/msg_text_size"
+        android:visibility="invisible" />
+
 </FrameLayout>
