--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     
     <dimen name="text_size">16sp</dimen>
     <dimen name="title_text_size">24sp</dimen>
-    <dimen name="error_msg_text_size">20sp</dimen>
+    <dimen name="msg_text_size">20sp</dimen>
     
 </resources>
