--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="text_size">16sp</dimen>
     <dimen name="title_text_size">24sp</dimen>
     <dimen name="msg_text_size">20sp</dimen>
-    
+    <dimen name="toolbar_elevation">4dp</dimen>
+
 </resources>
