--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="title_text_size">24sp</dimen>
     <dimen name="msg_text_size">20sp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="padding_small">4dp</dimen>
 
 </resources>
