--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,9 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
+            app:menu="@menu/toolbar_items_detail"
             android:elevation="@dimen/toolbar_elevation"
             android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
             app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+
 
         <FrameLayout
             android:id="@+id/fragment_container"
@@ -37,6 +39,8 @@
         app:menu="@menu/navigation_items_detail" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
+
+
 
 
 <!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
