--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/movies_rv"
+            android:id="@+id/movies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
