--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,49 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout_detail"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".ui.detail.DetailActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_detail"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            app:menu="@menu/toolbar_items_detail"
-            android:elevation="@dimen/toolbar_elevation"
-            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
-            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
-
-
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_header"
-        app:menu="@menu/navigation_items_detail" />
-
-</androidx.drawerlayout.widget.DrawerLayout>
-
-
-
-
-<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -52,113 +9,53 @@
             name="movie"
             type="com.udacity.android.popularmovies.model.Movie" />
     </data>
+-->
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout_detail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".ui.detail.DetailActivity">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:background="#3F51B5"
-                android:backgroundTint="#4CAF68"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/movie_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/bree_serif"
-                tools:text="Lord of the Rings: The Two Towers"
-                android:textSize="@dimen/title_text_size"
-                android:text="@{movie.title}"
-                app:layout_constraintBottom_toBottomOf="@+id/view"
-                app:layout_constraintStart_toStartOf="@+id/view"
-                app:layout_constraintTop_toTopOf="@+id/view" />
-
-            <ImageView
-                android:id="@+id/detail_movie_image"
-                android:layout_width="123dp"
-                android:layout_height="170dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
-                app:imageUrl="@{movie.image}"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <TextView
-                android:id="@+id/release_date_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/pt_sans"
-                android:text="@{movie.releaseDate}"
-                tools:text="December 18, 2002"
-                android:textSize="@dimen/text_size"
-                app:layout_constraintStart_toEndOf="@+id/detail_movie_image"
-                app:layout_constraintTop_toBottomOf="@+id/view" />
-
-            <TextView
-                android:id="@+id/average_rating_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/pt_sans"
-                android:textSize="@dimen/text_size"
-                android:text="@{movie.averageRating}"
-                app:layout_constraintStart_toStartOf="@+id/release_date_tv"
-                app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
-                tools:text="8.0 / 10.0" />
-
-            <TextView
-                android:id="@+id/movie_description"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/pt_sans"
-                android:paddingLeft="5dp"
-                android:paddingRight="30dp"
-                android:textSize="@dimen/text_size"
-                android:text="@{movie.description}"
-                app:layout_constraintStart_toStartOf="@+id/detail_movie_image"
-                app:layout_constraintTop_toBottomOf="@+id/detail_movie_image"
-                tools:text="Frodo continues his journey through the
-                        mountainous terrain to destroy the ring once and for all." />
+                android:background="@color/colorPrimary"
+                android:elevation="@dimen/toolbar_elevation"
+                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
+                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" >
 
-
-            <ToggleButton
-                android:id="@+id/button_favorite"
-                android:layout_width="34dp"
-                android:layout_height="29dp"
-                android:background="@drawable/favorite_button"
-                android:text=""
-                android:textOff=""
-                android:textOn=""
-                android:checked="@{movie.isFavorite}"
-                android:onClick="updateFavorite"
-                app:layout_constraintBottom_toTopOf="@+id/release_date_tv"
-                app:layout_constraintStart_toEndOf="@+id/release_date_tv"
-                app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
-                app:layout_constraintVertical_bias="0.571"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/trailers_rv"
+                    <ToggleButton
+                        android:id="@+id/button_favorite2"
+                        android:layout_width="34dp"
+                        android:layout_height="29dp"
+                        android:layout_gravity="end"
+                        android:background="@drawable/favorite_button"
+                        android:onClick="updateFavorite"
+                        android:text=""
+                        android:textOff=""
+                        android:textOn=""
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+            </androidx.appcompat.widget.Toolbar>
+            <FrameLayout
+                android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movie_description" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
-</layout>-->
+                android:layout_height="match_parent" />
+        </LinearLayout>
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/navigation_header"
+            app:menu="@menu/navigation_items_detail" />
+    </androidx.drawerlayout.widget.DrawerLayout>
+<!--</layout>-->
