--- a/app/src/main/res/layout/reviews_list_item.xml
+++ b/app/src/main/res/layout/reviews_list_item.xml
@@ -1,49 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <data>
-        <variable
-            name="review"
-            type="com.udacity.android.popularmovies.model.Review" />
-    </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/review_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{review.description}"
-            android:padding="@dimen/padding_small"
-            android:textSize="@dimen/msg_text_size"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@string/tools_review_description" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/review_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{review.author}"
-            android:paddingLeft="@dimen/padding_small"
-            android:textSize="@dimen/msg_text_size"
-            app:layout_constraintStart_toStartOf="@+id/review_description"
-            app:layout_constraintTop_toBottomOf="@+id/review_description"
-            tools:text="@string/tools_review_author" />
-
-        <View
+<androidx.cardview.widget.CardView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="6dp"
+    app:cardElevation="6dp">
+        <com.ms.square.android.expandabletextview.ExpandableTextView
+            xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/expand_text_view"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#dadada"
-            app:layout_constraintBottom_toBottomOf="@+id/review_author"
-            app:layout_constraintStart_toStartOf="@+id/review_author"
-            app:layout_constraintTop_toBottomOf="@+id/review_author" />
+            android:layout_height="wrap_content"
+            expandableTextView:maxCollapsedLines="4"
+            expandableTextView:animDuration="200">
+            <TextView
+                android:id="@+id/expandable_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textSize="@dimen/text_size"
+                android:textColor="#666666" />
+            <TextView
+                android:id="@+id/review_author"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textSize="12sp"
+                android:textColor="#666666" />
+            <ImageButton
+                android:id="@+id/expand_collapse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:layout_gravity="end|bottom"
+                android:background="@android:color/transparent"/>
+        </com.ms.square.android.expandabletextview.ExpandableTextView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-</layout>
+</androidx.cardview.widget.CardView>
