--- a/app/src/main/res/menu/navigation_items_detail.xml
+++ b/app/src/main/res/menu/navigation_items_detail.xml
@@ -10,11 +10,11 @@
 
         <item
             android:id="@+id/trailers"
-            android:title="@string/trailers_label" />
+            android:title="@string/trailers" />
 
         <item
             android:id="@+id/reviews"
-            android:title="@string/reviews_label" />
+            android:title="@string/reviews" />
     </group>
 
 </menu>
