--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,16 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-        <variable
-            name="movie"
-            type="com.udacity.android.popularmovies.model.Movie" />
-    </data>
--->
-
     <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -28,16 +16,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
-                android:elevation="@dimen/toolbar_elevation"
-                android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
-                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" >
+                android:elevation="@dimen/toolbar_elevation">
 
                     <ToggleButton
-                        android:id="@+id/button_favorite2"
+                        android:id="@+id/button_favorite"
                         android:layout_width="34dp"
                         android:layout_height="29dp"
                         android:layout_gravity="end"
                         android:background="@drawable/favorite_button"
+                        android:backgroundTint="@android:color/white"
+                        android:layout_marginRight="@dimen/margin_medium"
                         android:onClick="updateFavorite"
                         android:text=""
                         android:textOff=""
@@ -58,4 +46,3 @@
             app:headerLayout="@layout/navigation_header"
             app:menu="@menu/navigation_items_detail" />
     </androidx.drawerlayout.widget.DrawerLayout>
-<!--</layout>-->
