--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -18,18 +18,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/movie_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/bree_serif"
-                    tools:text="Lord of the Rings: The Two Towers"
-                    android:textSize="@dimen/title_text_size"
-                    android:text="@{movie.title}"
-                    app:layout_constraintBottom_toBottomOf="@+id/view"
-                    app:layout_constraintStart_toStartOf="@+id/view"
-                    app:layout_constraintTop_toTopOf="@+id/view" />
-
 
 
                 <ImageView
@@ -37,48 +25,75 @@
                     android:layout_width="123dp"
                     android:layout_height="170dp"
                     app:imageUrl="@{movie.image}"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/movie_title"
+                    android:layout_margin="@dimen/margin_large"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/release_date_tv"
+                    android:id="@+id/release_date_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/margin_medium"
+                    android:fontFamily="@font/pt_sans"
+                    android:text="@string/release_date_label"
+                    android:textSize="@dimen/text_size"
+                    app:layout_constraintTop_toTopOf="@id/detail_movie_image"
+                    app:layout_constraintLeft_toRightOf="@id/detail_movie_image"
+                    tools:text="Release Date: " />
+
+                <TextView
+                    android:id="@+id/release_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/pt_sans"
                     android:text="@{movie.releaseDate}"
                     android:textSize="@dimen/text_size"
-                    app:layout_constraintStart_toEndOf="@+id/detail_movie_image"
-                    app:layout_constraintTop_toTopOf="@+id/detail_movie_image"
+                    android:layout_marginLeft="@dimen/margin_medium"
+                    app:layout_constraintTop_toBottomOf="@id/release_date_label"
+                    app:layout_constraintBottom_toTopOf="@id/release_date_label"
+                    app:layout_constraintLeft_toRightOf="@id/release_date_label"
                     tools:text="December 18, 2002" />
 
                 <TextView
-                    android:id="@+id/average_rating_tv"
+                    android:id="@+id/average_rating_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/pt_sans"
+                    android:textSize="@dimen/text_size"
+                    android:text="@string/average_rating_label"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    app:layout_constraintLeft_toLeftOf="@id/release_date_label"
+                    app:layout_constraintTop_toBottomOf="@id/release_date_label"
+                    tools:text="Average Rating:" />
+
+                <TextView
+                    android:id="@+id/average_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/pt_sans"
                     android:textSize="@dimen/text_size"
                     android:text="@{movie.averageRating}"
-                    app:layout_constraintStart_toStartOf="@+id/release_date_tv"
-                    app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
+                    app:layout_constraintRight_toRightOf="@id/release_date"
+                    app:layout_constraintTop_toBottomOf="@id/average_rating_label"
+                    app:layout_constraintBottom_toTopOf="@id/average_rating_label"
                     tools:text="8.0 / 10.0" />
 
                 <TextView
                     android:id="@+id/movie_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_margin="@dimen/margin_large"
                     android:fontFamily="@font/pt_sans"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="30dp"
                     android:textSize="@dimen/text_size"
                     android:text="@{movie.description}"
                     app:layout_constraintStart_toStartOf="@+id/detail_movie_image"
                     app:layout_constraintTop_toBottomOf="@+id/detail_movie_image"
                     tools:text="Frodo continues his journey through the
                         mountainous terrain to destroy the ring once and for all." />
+
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </FrameLayout>
