--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+
+    <dimen name="text_size_small">8sp</dimen>
     <dimen name="text_size">16sp</dimen>
     <dimen name="title_text_size">24sp</dimen>
     <dimen name="msg_text_size">20sp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
     <dimen name="padding_small">4dp</dimen>
 
+    <dimen name="margin_medium">8dp</dimen>
+    <dimen name="margin_large">16dp</dimen>
 </resources>
