Changed MovieDetailFragment to become a DetailBaseListFragment to fix the issue of the app bar collapsing for that tab improperly, compared to the other two tabs on the screen.

--- a/app/src/main/res/menu/navigation_items_detail.xml
+++ b/app/src/main/res/menu/navigation_items_detail.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/details"
-            android:title="@string/details_label" />
+            android:title="@string/label_details" />
 
         <item
             android:id="@+id/trailers"
