--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -23,72 +23,155 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="32dp"
-                    card_view:cardBackgroundColor="@android:color/white"
-                    card_view:cardCornerRadius="2dp"
-                    card_view:cardElevation="2dp"
-                    card_view:cardUseCompatPadding="true"
-                    card_view:contentPadding="16dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/fragment_movie_detail_cardview_margin_bottom"
+                android:layout_marginLeft="@dimen/fragment_movie_detail_cardview_margin_horizontal"
+                android:layout_marginRight="@dimen/fragment_movie_detail_cardview_margin_horizontal"
+                android:layout_marginTop="@dimen/fragment_movie_detail_cardview_margin_top"
+                card_view:cardBackgroundColor="@android:color/white"
+                card_view:cardCornerRadius="@dimen/fragment_movie_detail_cardview_card_corner_radius"
+                card_view:cardElevation="@dimen/fragment_movie_detail_cardview_card_elevation"
+                card_view:cardUseCompatPadding="true"
+                card_view:contentPadding="@dimen/fragment_movie_detail_cardview_content_padding"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
-                    <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="0dp"
+                        android:layout_height="80dp"
+                        android:gravity="center_vertical"
+                        android:maxLines="2"
+                        android:text="@{movie.title}"
+                        android:textColor="@color/primaryText"
+                        android:textSize="@dimen/fragment_movie_detail_label_title"
+                        tools:text="@string/fragment_movie_detail_movie_title"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintRight_toLeftOf="@id/button_favorite"
+                        />
+                    <TextView
+                        android:id="@+id/releaseDate"
+                        style="@style/DetailField"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableLeft="@drawable/ic_calendar"
+                        android:drawablePadding="16dp"
+                        android:minHeight="48dp"
+                        android:text="@{movie.releaseDate}"
+                        tools:text="@string/fragment_movie_detail_release_date"
+                        app:layout_constraintLeft_toLeftOf="@id/title"
+                        app:layout_constraintTop_toBottomOf="@id/title"/>
+                    <TextView
+                        android:id="@+id/overview_label"
+                        style="@style/HeaderTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/fragment_movie_detail_label_overview"
+                        app:layout_constraintLeft_toLeftOf="@id/releaseDate"
+                        app:layout_constraintTop_toBottomOf="@id/releaseDate"/>
+                    <TextView
+                        android:id="@+id/overview"
+                        style="@style/DetailField"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:text="@{movie.description}"
+                        tools:text="@string/fragment_movie_detail_description"
+                        app:layout_constraintLeft_toLeftOf="@id/overview_label"
+                        app:layout_constraintTop_toBottomOf="@id/overview_label"/>
 
-                        <TextView
-                            android:id="@+id/title"
-                            android:layout_width="match_parent"
-                            android:layout_height="80dp"
-                            android:ellipsize="end"
-                            android:gravity="center_vertical"
-                            android:maxLines="2"
-                            android:textColor="@color/primaryText"
-                            android:textSize="28sp"
-                            tools:text="@{movie.title}" />
-
-                        <TextView
-                            android:id="@+id/releaseDate"
-                            style="@style/DetailField"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:drawableLeft="@drawable/ic_calendar"
-                            android:drawablePadding="16dp"
-                            android:minHeight="48dp"
-                            tools:text="@{movie.releaseDate}" />
-
-                        <LinearLayout
-                            android:id="@+id/overview_container"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                style="@style/HeaderTextView"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="overview" />
-
-                            <TextView
-                                android:id="@+id/overview"
-                                style="@style/DetailField"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                tools:text="@{movie.description}" />
-
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                    <ImageView
+                         android:id="@+id/button_favorite"
+                         android:layout_width="64dp"
+                         android:layout_height="64dp"
+                         android:layout_gravity="right"
+                         android:contentDescription="@string/content_description_favorite"
+                         android:src="@drawable/ic_heart"
+                         app:layout_constraintTop_toTopOf="parent"
+                         app:layout_constraintRight_toRightOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
             </FrameLayout>
         </ScrollView>
-
-
-
-
     </FrameLayout>
 </layout>
+
+    <!--
+    <FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/fragment_movie_detail_cardview_margin_bottom"
+        android:layout_marginLeft="@dimen/fragment_movie_detail_cardview_margin_horizontal"
+        android:layout_marginRight="@dimen/fragment_movie_detail_cardview_margin_horizontal"
+        android:layout_marginTop="@dimen/fragment_movie_detail_cardview_margin_top"
+        card_view:cardBackgroundColor="@android:color/white"
+        card_view:cardCornerRadius="@dimen/fragment_movie_detail_cardview_card_corner_radius"
+        card_view:cardElevation="@dimen/fragment_movie_detail_cardview_card_elevation"
+        card_view:cardUseCompatPadding="true"
+        card_view:contentPadding="@dimen/fragment_movie_detail_cardview_content_padding">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="2"
+                android:textColor="@color/primaryText"
+                android:textSize="@dimen/fragment_movie_detail_label_title"
+                android:text="@{movie.title}"
+                tools:text="@string/fragment_movie_detail_movie_title" />
+
+            <TextView
+                android:id="@+id/releaseDate"
+                style="@style/DetailField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_calendar"
+                android:drawablePadding="16dp"
+                android:minHeight="48dp"
+                android:text="@{movie.releaseDate}"
+                tools:text="@string/fragment_movie_detail_release_date" />
+
+            <LinearLayout
+                android:id="@+id/overview_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/HeaderTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/fragment_movie_detail_label_overview" />
+
+                <TextView
+                    android:id="@+id/overview"
+                    style="@style/DetailField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{movie.description}"
+                    tools:text="@string/fragment_movie_detail_description" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+    </FrameLayout>-->
