--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,12 +12,19 @@
     <dimen name="margin_medium">8dp</dimen>
     <dimen name="margin_large">16dp</dimen>
 
+    <dimen name="fragment_movie_detail_label_title">28sp</dimen>
 
-    <dimen name="fragment_movie_detail_average_rating_margin">32dp</dimen>
-    <dimen name="fragment_movie_detail_description_margin_top">40dp</dimen>
+    <dimen name="fragment_movie_detail_cardview_margin_horizontal">16dp</dimen>
+    <dimen name="fragment_movie_detail_cardview_margin_bottom">16dp</dimen>
+    <dimen name="fragment_movie_detail_cardview_margin_top">32dp</dimen>
+    <dimen name="fragment_movie_detail_cardview_card_corner_radius">2dp</dimen>
+    <dimen name="fragment_movie_detail_cardview_card_elevation">2dp</dimen>
+    <dimen name="fragment_movie_detail_cardview_content_padding">16dp</dimen>
 
 
-    <dimen name="detail_activity_horizontal_margin">8dp</dimen>
-    <dimen name="detail_activity_vertical_margin">8dp</dimen>
+
+
+    <dimen name="detail_activity_margin_horizontal">8dp</dimen>
+    <dimen name="detail_activity_margin_vertical">8dp</dimen>
 
 </resources>
